# FinDataAgent

./: .env  .gitignore  PPT汇报内容草案.md  README.md  TODO.md  complete_stock_export.py  config.json  direct_tushare_export.py  export_stock_daily.py  export_stock_daily_demo.py  export_stock_robust.py  final_complete_analysis.py  findata-agent.skill  main.py  min_test.py  pyproject.toml  requirements.txt  start_app.bat  代码阅读指南.md  敏捷看板.md  结课作业要求.md  规格说明书 - new.md  规格说明书.md
core/: agent_engine.py  knowledge_manager.py  knowlegde_manager.py  prompt_templates.py
findata-agent/: SKILL.md
findata-agent/assets/: economic_analysis_template.py  stock_analysis_template.py
findata-agent/references/: tushare_schema.md  workflows.md
findata-agent/scripts/: chart_setup.py  code_executor.py  data_processor.py
gui/: README.md  app.py
gui/components/: chat.py  results.py  timeline.py  topbar.py
gui/services/: agent_stream.py  config_manager.py  events.py
gui/state/: store.py
gui/styles/: theme.py
knowledge_base/: README.md  tool_docs.json  tushare_schema.json
log_tools/: logger.py
tools/: code_executor.py  plot_utils.py  tushare_api.py
workspace/: README.md
workspace/temp_scripts/: agent_exec.py
